--- a/learning2021/xaw-diary-parent/diary-service/pom.xml
+++ b/learning2021/xaw-diary-parent/diary-service/pom.xml
@@ -12,10 +12,7 @@
     <artifactId>diary-service</artifactId>
 
     <properties>
-        <project.build.jdk>1.8</project.build.jdk>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-
+        <aspectj.version>1.9.3</aspectj.version>
     </properties>
 
     <dependencies>
@@ -49,23 +46,31 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wx</groupId>
+            <artifactId>xaw-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>diary</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>${project.build.jdk}</source>
-                    <target>${project.build.jdk}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 
 </project>
