--- a/learning2021/xaw-diary-parent/diary-stub/pom.xml
+++ b/learning2021/xaw-diary-parent/diary-stub/pom.xml
@@ -11,5 +11,22 @@
 
     <artifactId>diary-stub</artifactId>
 
-
+<dependencies>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.12</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.wx</groupId>
+        <artifactId>xaw-common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+    </dependency>
+</dependencies>
 </project>
