--- a/learning2021/xaw-common/pom.xml
+++ b/learning2021/xaw-common/pom.xml
@@ -27,6 +27,13 @@
         <artifactId>mapper-spring-boot-starter</artifactId>
         <version>${mybatis-tk.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.15</version>
+    </dependency>
+
 
 </dependencies>
     <build>
